favicon and settings

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "kurtis-kovel-portfolio",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Kurtis Kovel portfolio created with Gatsby and hosted on Netlify",
   "version": "0.1.0",
   "license": "MIT",
   "scripts": {
